--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -44,5 +44,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_hamburgers";
 @import "pendigital/factory_heroes";
 @import "pendigital/factory_testimonials";
+@import "pendigital/factory_cards";
 
 /* Custom CSS rules come here */
