--- a/bootstrap_theme/pendigital/factory_cards.scss
+++ b/bootstrap_theme/pendigital/factory_cards.scss
@@ -31,4 +31,66 @@
             font-weight: 700;
         }
     }
+
+    // wrapping anchor tag
+    .pd-cards-1-card-outer {
+        display: block;
+        text-decoration: none;
+        color: $black;
+
+        .pd-cards-1-image-outer {
+            height: 200px;
+            overflow: hidden;
+
+            img {
+                object-fit: cover;
+                object-position: center center;
+                width: 100%;
+                height: 100%;
+                transition: transform 0.4s;
+            }
+        }
+
+        .pd-cards-1-body {
+            padding-top: 10px;
+            padding-bottom: 10px;
+
+            h3 {
+                font-weight: 700;
+                line-height: 2;
+                font-size: 1.4rem;
+                margin-bottom: 0px;
+            }
+
+            p {
+                line-height: 2;
+                color: $gray-600;
+            }
+        }
+
+        .pd-cards-1-footer {
+            p {
+                color: $primary;
+                font-weight: 700;
+
+                &:after {
+                    content: ">";
+                    padding-left: 4px;
+                }
+            }
+        }
+
+        &:hover {
+            .pd-cards-1-image-outer {
+                img {
+                    transform: scale(1.1);
+                }
+            }
+        }
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 5px;
+        }
+    }
 }
