--- a/bootstrap_theme/pendigital/factory_cards.scss
+++ b/bootstrap_theme/pendigital/factory_cards.scss
@@ -1,5 +1,10 @@
 // start pd-cards-1
 .pd-cards-1 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+    padding-top: 100px;
+    padding-bottom: 100px;
+
     h2 {
         background: $info;
         font-weight: 700;
@@ -58,7 +63,7 @@
             h3 {
                 font-weight: 700;
                 line-height: 2;
-                font-size: 1.4rem;
+                font-size: 1.2rem;
                 margin-bottom: 0px;
             }
 
@@ -72,6 +77,7 @@
             p {
                 color: $primary;
                 font-weight: 700;
+                transition: color 0.4s;
 
                 &:after {
                     content: ">";
@@ -86,6 +92,12 @@
                     transform: scale(1.1);
                 }
             }
+
+            .pd-cards-1-footer {
+                p {
+                    color: lighten($primary, 10%);
+                }
+            }
         }
 
         &:focus {
@@ -93,4 +105,222 @@
             outline-offset: 5px;
         }
     }
+
+    .pd-cards-1-link {
+        font-weight: 700;
+        text-decoration: none;
+        color: $primary;
+        transition: color 0.4s;
+
+        &:hover {
+            color: lighten($primary, 10%);
+        }
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
+        }
+    }
 }
+
+// end pd-cards-1
+// start pd-cards-2
+.pd-cards-2 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    h2 {
+        background: $info;
+        font-weight: 700;
+        font-size: 0.9rem;
+        color: $white;
+        border-radius: 50em;
+        padding: 8px 14px;
+        display: inline-block;
+    }
+
+    .pd-cards-2-headline {
+        font-size: 2rem;
+        color: $black;
+        line-height: 1.5;
+        font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-cards-2-subHeadline {
+        font-size: 1rem;
+        color: $black;
+        line-height: 1.5;
+        font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    // wrapping anchor tag
+    .pd-cards-2-card-outer {
+        display: block;
+
+        // text-decoration: none;
+        color: $black;
+
+        .pd-cards-2-image-outer {
+            height: 200px;
+            overflow: hidden;
+
+            img {
+                object-fit: cover;
+                object-position: center center;
+                width: 100%;
+                height: 100%;
+
+                // transition: transform 0.4s;
+            }
+        }
+
+        .pd-cards-2-body {
+            padding-top: 10px;
+            padding-bottom: 10px;
+
+            h3 {
+                font-weight: 700;
+                line-height: 2;
+                font-size: 1.2rem;
+                margin-bottom: 0px;
+            }
+
+            p {
+                line-height: 2;
+                color: $gray-600;
+            }
+        }
+    }
+
+    .pd-cards-2-link {
+        font-weight: 700;
+        text-decoration: none;
+        color: $primary;
+        transition: color 0.4s;
+
+        &:hover {
+            color: lighten($primary, 10%);
+        }
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
+        }
+    }
+}
+
+// end pd-cards-2
+// start pd-cards-3
+.pd-cards-3 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    h2 {
+        background: $info;
+        font-weight: 700;
+        font-size: 0.9rem;
+        color: $white;
+        border-radius: 50em;
+        padding: 8px 14px;
+        display: inline-block;
+    }
+
+    .pd-cards-3-headline {
+        font-size: 2rem;
+        color: $black;
+        line-height: 1.5;
+        font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-cards-3-subHeadline {
+        font-size: 1rem;
+        color: $black;
+        line-height: 1.5;
+        font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    // anchor link
+    .pd-cards-4-outer {
+        display: block;
+        position: relative;
+        text-decoration: none;
+        color: $white;
+
+        .pd-cards-4-image-outer {
+            min-height: 300px;
+            overflow: hidden;
+            position: relative;
+
+            img {
+                position: absolute;
+                object-fit: cover;
+                object-position: center center;
+                width: 100%;
+                height: 100%;
+                transition: transform 0.4s;
+            }
+        }
+
+        .pd-cards-4-image-overlay {
+            position: absolute;
+            top: 0;
+            z-index: 1;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.7) 90%);
+        }
+
+        .pd-cards-4-body {
+            position: absolute;
+            bottom: 0px;
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            z-index: 2;
+            transition: transform 0.4s, margin-left 0.4s;
+
+            h3 {
+                font-weight: 700;
+                margin-bottom: 0px;
+                line-height: 1.6;
+                font-size: 1.2rem;
+            }
+        }
+
+        &:hover {
+            .pd-cards-4-image-outer {
+                img {
+                    transform: scale(1.1);
+                }
+            }
+
+            .pd-cards-4-body {
+                transform: scale(1.1);
+                margin-left: 10px;
+            }
+        }
+    }
+}
+
+// end pd-cards-3
