--- a/bootstrap_theme/pendigital/factory_cards.scss
+++ b/bootstrap_theme/pendigital/factory_cards.scss
@@ -260,7 +260,7 @@
     }
 
     // anchor link
-    .pd-cards-4-outer {
+    .pd-cards-3-outer {
         display: block;
         position: relative;
         text-decoration: none;
@@ -288,6 +288,7 @@
             width: 100%;
             height: 100%;
             background: linear-gradient(rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.7) 90%);
+            transition: background 0.4s;
         }
 
         .pd-cards-4-body {
@@ -309,18 +310,274 @@
         }
 
         &:hover {
+            box-shadow: 8px 8px 18px rgba(0, 0, 0, 0.4);
+
             .pd-cards-4-image-outer {
                 img {
                     transform: scale(1.1);
                 }
             }
 
-            .pd-cards-4-body {
-                transform: scale(1.1);
-                margin-left: 10px;
+            .pd-cards-4-image-overlay {
+                background: linear-gradient(rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.9) 100%);
             }
+        }
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
+        }
+    }
+
+    .pd-cards-3-link {
+        font-weight: 700;
+        text-decoration: none;
+        color: $primary;
+        transition: color 0.4s;
+
+        &:hover {
+            color: lighten($primary, 10%);
+        }
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 4px;
         }
     }
 }
 
 // end pd-cards-3
+// start pd-cards-4
+.pd-cards-4 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    h2 {
+        background: $info;
+        font-weight: 700;
+        font-size: 0.9rem;
+        color: $white;
+        border-radius: 50em;
+        padding: 8px 14px;
+        display: inline-block;
+    }
+
+    .pd-cards-4-headline {
+        font-size: 2rem;
+        color: $primary;
+        line-height: 1.5;
+        font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-cards-4-subHeadline {
+        font-size: 1rem;
+        color: $black;
+        line-height: 1.5;
+        font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-cards-4-card-outer {
+        border: 1px solid $gray-300;
+        border-radius: 15px;
+        position: relative;
+        padding-right: 40px;
+        padding-left: 40px;
+        padding-top: 60px;
+        padding-bottom: 40px;
+
+        h3 {
+            font-weight: 700;
+            font-size: 2rem;
+            color: $black;
+            line-height: 1.6;
+            margin-bottom: 20px;
+        }
+
+        p {
+            color: $gray-600;
+            line-height: 2;
+        }
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            color: $black;
+            font-weight: 700;
+            text-transform: uppercase;
+            font-size: 0.8rem;
+
+            li {
+                padding-top: 4px;
+                padding-bottom: 4px;
+                padding-left: 14px;
+                position: relative;
+
+                &:before {
+                    content: ">";
+                    padding-right: 4px;
+                    position: absolute;
+                    left: 0;
+                }
+            }
+        }
+    }
+
+    .pd-cards-4-link {
+        font-weight: 700;
+        text-decoration: none;
+        color: $primary;
+        transition: color 0.4s;
+
+        &:hover {
+            color: lighten($primary, 10%);
+        }
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
+        }
+    }
+}
+
+// end pd-cards-4
+// start pd-cards-5
+.pd-cards-5 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    h2 {
+        background: $info;
+        font-weight: 700;
+        font-size: 0.9rem;
+        color: $white;
+        border-radius: 50em;
+        padding: 8px 14px;
+        display: inline-block;
+    }
+
+    .pd-cards-5-headline {
+        font-size: 2rem;
+        color: $black;
+        line-height: 1.5;
+        font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-cards-5-subHeadline {
+        font-size: 1rem;
+        color: $black;
+        line-height: 1.5;
+        font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    // anchor outer
+    .pd-cards-5-card-outer {
+        border: 1px solid $gray-300;
+        border-radius: 15px;
+        position: relative;
+        background: $white;
+        padding-right: 40px;
+        padding-left: 40px;
+        padding-top: 60px;
+        padding-bottom: 40px;
+        text-decoration: none;
+        transition: transform 0.4s;
+
+        h3 {
+            font-weight: 700;
+            font-size: 2rem;
+            color: $black;
+            line-height: 1.6;
+            margin-bottom: 20px;
+        }
+
+        p {
+            color: $gray-600;
+            line-height: 2;
+        }
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            color: $black;
+            font-weight: 700;
+            text-transform: uppercase;
+            font-size: 0.8rem;
+
+            li {
+                padding-top: 4px;
+                padding-bottom: 4px;
+                padding-left: 14px;
+                position: relative;
+
+                &:before {
+                    content: ">";
+                    padding-right: 4px;
+                    position: absolute;
+                    left: 0;
+                }
+            }
+        }
+
+        p.pd-cards-5-readMore {
+            color: $primary;
+            padding-top: 20px;
+            text-transform: uppercase;
+            margin-bottom: 0px;
+            transition: color 0.4s;
+        }
+
+        &:hover {
+            box-shadow: 8px 8px 18px rgba(0, 0, 0, 0.4);
+            transform: scale(1.05);
+
+            .pd-cards-5-readMore {
+                color: lighten($primary, 10%);
+            }
+        }
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 4px;
+        }
+    }
+
+    .pd-cards-5-link {
+        font-weight: 700;
+        text-decoration: none;
+        color: $primary;
+        transition: color 0.4s;
+
+        &:hover {
+            color: lighten($primary, 10%);
+        }
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
+        }
+    }
+}
+
+// end pd-cards-5
