Finished cards and started sections

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -45,5 +45,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_heroes";
 @import "pendigital/factory_testimonials";
 @import "pendigital/factory_cards";
+@import "pendigital/factory_sections";
 
 /* Custom CSS rules come here */
