--- a/bootstrap_theme/pendigital/factory_sections.scss
+++ b/bootstrap_theme/pendigital/factory_sections.scss
@@ -62,6 +62,72 @@
     }
 }
 
+// end pd-section-1
+// start pd-section-2
+.pd-section-2 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+
+    h2 {
+        font-weight: 700;
+        font-size: 0.7rem;
+        color: $white;
+        display: inline-block;
+
+        // background: rgba(255, 255, 255, 1);
+        background: $info;
+        padding: 8px 14px;
+        border-radius: 50em;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+
+    .pd-section-2-headline {
+        color: $black;
+        font-weight: 300;
+        line-height: 1.4;
+        font-size: 2rem;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-section-2-para {
+        color: $gray-600;
+        line-height: 2;
+        font-weight: 300;
+    }
+
+    .pd-section-2-image-outer {
+        position: relative;
+        min-height: 540px;
+        overflow: hidden;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center center;
+            position: absolute;
+        }
+    }
+
+    .pd-section-2-image-overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient($black 0%, rgba(0, 0, 0, 0.4) 30%, rgba(0, 0, 0, 0.6) 80%, $black 100%);
+        opacity: 0.6;
+        top: 0px;
+        left: 0px;
+    }
+}
+
+
+
+
+
 
 
 
