Added new tweaks to sections

--- a/bootstrap_theme/pendigital/factory_sections.scss
+++ b/bootstrap_theme/pendigital/factory_sections.scss
@@ -2,7 +2,8 @@
     border-top: 1px solid $gray-300;
     border-bottom: 1px solid $gray-300;
 
-    h2 {
+    h2,
+    h3 {
         font-weight: 700;
         font-size: 0.7rem;
         color: $white;
