--- a/bootstrap_theme/pendigital/factory_sections.scss
+++ b/bootstrap_theme/pendigital/factory_sections.scss
@@ -222,14 +222,15 @@
     .pd-section-4-image-outer {
         height: 100%;
         min-height: 380px;
-        width: 100%;
+        width: 280px;
         position: relative;
         overflow: hidden;
 
         img {
-            width: 240px;
+            width: 280px;
             position: absolute;
-            bottom: -140px;
+            bottom: -200px;
+            left: 0;
             height: auto;
         }
     }
@@ -245,6 +246,239 @@
         }
     }
 }
+
+// end pd-section-4
+// start pd-section-5
+.pd-section-5 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+    background: linear-gradient(180deg, $primary, darken($primary, 10%));
+
+    // background: linear-gradient($gray-100 0%, $white 20%, $white 80%, $gray-100 100%);
+    h2 {
+        font-weight: 700;
+        font-size: 0.7rem;
+        color: $white;
+        display: inline-block;
+
+        // background: rgba(255, 255, 255, 1);
+        background: $info;
+        padding: 8px 14px;
+        border-radius: 50em;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+
+    .pd-section-5-headline {
+        color: $white;
+        font-weight: 300;
+        line-height: 1.4;
+        font-size: 2rem;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-section-5-para {
+        color: $white;
+        line-height: 2;
+        font-weight: 300;
+    }
+
+    .pd-section-5-image-outer {
+        height: 100%;
+        min-height: 380px;
+        width: 280px;
+        position: relative;
+        overflow: hidden;
+
+        img {
+            width: 280px;
+            position: absolute;
+            bottom: -200px;
+            left: 0;
+            height: auto;
+        }
+    }
+
+    // column
+    .pd-section-5-text-outer {
+        min-height: 0px;
+    }
+
+    @media (min-width: 992px) {
+        .pd-section-5-text-outer {
+            min-height: 450px;
+        }
+    }
+}
+
+// end pd-section-5
+// start pd-section-6
+.pd-section-6 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+
+    // background: linear-gradient(180deg, $primary, darken($primary, 10%));
+    background: linear-gradient(rgba(18,18,18,0.85) 0%, rgba(18,18,18,1) 100%);
+
+    // background: linear-gradient($gray-100 0%, $white 20%, $white 80%, $gray-100 100%);
+    h2 {
+        font-weight: 700;
+        font-size: 0.7rem;
+        color: $white;
+        display: inline-block;
+
+        // background: rgba(255, 255, 255, 1);
+        background: $info;
+        padding: 8px 14px;
+        border-radius: 50em;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+
+    .pd-section-6-headline {
+        color: $white;
+        font-weight: 300;
+        line-height: 1.4;
+        font-size: 2rem;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-section-6-para {
+        color: $white;
+        line-height: 2;
+        font-weight: 300;
+    }
+
+    .pd-section-6-image-outer {
+        height: 100%;
+        min-height: 380px;
+        width: 280px;
+        position: relative;
+        overflow: hidden;
+
+        img {
+            width: 280px;
+            position: absolute;
+            bottom: -200px;
+            left: 0;
+            height: auto;
+        }
+    }
+
+    // column
+    .pd-section-6-text-outer {
+        min-height: 0px;
+    }
+
+    @media (min-width: 992px) {
+        .pd-section-6-text-outer {
+            min-height: 450px;
+        }
+    }
+}
+
+// end pd-section-6
+// start pd-section-7
+.pd-section-7 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+
+    // background: linear-gradient(180deg, $primary, darken($primary, 10%));
+    background: linear-gradient(rgba(18,18,18,0.85) 0%, rgba(18,18,18,1) 100%);
+
+    // background: linear-gradient($gray-100 0%, $white 20%, $white 80%, $gray-100 100%);
+    h2 {
+        font-weight: 700;
+        font-size: 0.7rem;
+        color: $white;
+        display: inline-block;
+
+        // background: rgba(255, 255, 255, 1);
+        background: $info;
+        padding: 8px 14px;
+        border-radius: 50em;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+
+    .pd-section-7-headline {
+        color: $white;
+        font-weight: 300;
+        line-height: 1.4;
+        font-size: 2rem;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-section-7-para {
+        color: $white;
+        line-height: 2;
+        font-weight: 300;
+    }
+
+    .pd-section-7-image-outer {
+        height: 100%;
+        min-height: 380px;
+        width: 280px;
+        position: relative;
+        overflow: hidden;
+
+        img {
+            width: 280px;
+            position: absolute;
+            bottom: -200px;
+            left: 0;
+            height: auto;
+        }
+    }
+
+    // column
+    .pd-section-7-text-outer {
+        min-height: 0px;
+    }
+
+    @media (min-width: 992px) {
+        .pd-section-7-text-outer {
+            min-height: 450px;
+        }
+    }
+
+    .pd-section-7-image-overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+
+        // background: linear-gradient(rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.8) 100%);
+        background: linear-gradient(rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0.35) 70%, rgba(0, 0, 0, 0.8) 100%);
+    }
+
+    .pd-section-7-background-image-outer {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background: red;
+        opacity: 0.5;
+        overflow: hidden;
+
+        img {
+            object-fit: cover;
+            object-position: center center;
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
+// end pd-section-7
 
 
 
