--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -46,5 +46,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_testimonials";
 @import "pendigital/factory_cards";
 @import "pendigital/factory_sections";
+@import "pendigital/factory_footers";
 
 /* Custom CSS rules come here */
