Started to testimonial sliders

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -47,5 +47,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_cards";
 @import "pendigital/factory_sections";
 @import "pendigital/factory_footers";
+@import "pendigital/factory_testimonial_sliders";
 
 /* Custom CSS rules come here */
