--- a/bootstrap_theme/pendigital/factory_testimonial_sliders.scss
+++ b/bootstrap_theme/pendigital/factory_testimonial_sliders.scss
@@ -7,11 +7,15 @@
     padding-bottom: 100px;
 
     h2 {
-        letter-spacing: 1.2px;
         font-weight: 700;
+        font-size: 0.7rem;
+        color: $white;
+        display: inline-block;
+        background: $info;
+        padding: 8px 14px;
+        border-radius: 50em;
         text-transform: uppercase;
-        font-size: 0.8rem;
-        color: $gray-600;
+        letter-spacing: 0.1em;
     }
 
     .pd-testimonial-slider-1-quotes {
@@ -45,6 +49,17 @@
         position: relative;
     }
 
+    .pd-testimonial-slider-1-arrowWrapper {
+        border: none;
+        background: none;
+        position: absolute;
+        top: 50%;
+    }
+
+    .pd-testimonial-slider-1-arrowWrapper.glide__arrow--right {
+        right: 0;
+    }
+
     .pd-testimonial-slider-1-link {
         font-weight: 700;
         text-decoration: none;
@@ -60,6 +75,27 @@
             outline-offset: 2px;
         }
     }
+
+    .glide__bullets {
+        text-align: center;
+
+        .glide__bullet {
+            width: 9px;
+            height: 9px;
+            padding: 0;
+            border-radius: 50%;
+            border: 2px solid darken($primary, 10%);
+            background: $primary;
+            transition: transform 0.4s;
+        }
+
+        .glide__bullet.glide__bullet--active {
+            transform: scale(1.3);
+
+            // box-shadow: 2px 2px 6px 3px rgba(0,0,0,0.4);
+        }
+    }
 }
 
 // end pd-testimonial-slider-1
+
