Added more testimonials

--- a/bootstrap_theme/pendigital/factory_testimonial_sliders.scss
+++ b/bootstrap_theme/pendigital/factory_testimonial_sliders.scss
@@ -98,4 +98,273 @@
 }
 
 // end pd-testimonial-slider-1
+// start testimonial slider 2
+.pd-testimonial-slider-2 {
+    background: linear-gradient(180deg, $primary, darken($primary, 10%));
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+    padding-top: 100px;
+    padding-bottom: 60px;
+
+    h2 {
+        font-weight: 700;
+        font-size: 0.7rem;
+        color: $white;
+        display: inline-block;
+        background: $info;
+        padding: 8px 14px;
+        border-radius: 50em;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+
+    .pd-testimonial-slider-2-quotes {
+        position: absolute;
+        z-index: 0;
+        opacity: 0.4;
+    }
+
+    .pd-testimonial-slider-2-quotes.left {
+        top: -50px;
+        left: 0px;
+    }
+
+    .pd-testimonial-slider-2-quotes.right {
+        right: 0px!important;
+        bottom: -50px;
+    }
+
+    .pd-testimonial-slider-2-mainText {
+        z-index: 10;
+        position: relative;
+        font-weight: 300;
+        color: $white;
+    }
+
+    .pd-testimonial-slider-2-quotation {
+        line-height: 2.2;
+        font-size: 1.2rem;
+    }
+
+    // .pd-testimonial-slider-2-author {
+    // z-index: 10;
+    // position: relative;
+    // color: $white;
+    // }
+    .pd-testimonial-slider-2-author {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        z-index: 10;
+        position: relative;
+        color: $white;
+
+        @media (max-width: 575px) {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        img {
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+            box-shadow: 0 10px 5px -5px rgba(0,0,0,.15);
+        }
+    }
+
+    .pd-testimonial-slider-2-arrowWrapper {
+        border: none;
+        background: none;
+        position: absolute;
+        top: 50%;
+    }
+
+    .pd-testimonial-slider-2-arrowWrapper.glide__arrow--right {
+        right: 0;
+    }
+
+    .pd-testimonial-slider-2-link {
+        font-weight: 700;
+        text-decoration: none;
+        transition: color 0.4s;
+        color: $white;
+
+        &:hover {
+            text-decoration: none;
+            color: lighten($white, 10%);
+        }
+
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: 2px;
+        }
+    }
+
+    .glide__bullets {
+        text-align: center;
+
+        .glide__bullet {
+            width: 9px;
+            height: 9px;
+            padding: 0;
+            border-radius: 50%;
+            border: 2px solid darken($white, 10%);
+            background: $white;
+            transition: transform 0.4s;
+        }
+
+        .glide__bullet.glide__bullet--active {
+            transform: scale(1.3);
+
+            // box-shadow: 2px 2px 6px 3px rgba(0,0,0,0.4);
+        }
+    }
+}
+
+// end pd-testimonial-slider-2
+// start testimonial slider 3
+.pd-testimonial-slider-3 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+    padding-top: 100px;
+    padding-bottom: 60px;
+
+    h2 {
+        position: relative;
+        font-weight: 700;
+        font-size: 0.7rem;
+        color: $white;
+        display: inline-block;
+        background: $info;
+        padding: 8px 14px;
+        border-radius: 50em;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+
+    .pd-testimonial-slider-3-quotes {
+        position: absolute;
+        z-index: 0;
+        opacity: 0.4;
+    }
+
+    .pd-testimonial-slider-3-quotes.left {
+        top: -50px;
+        left: 0px;
+    }
+
+    .pd-testimonial-slider-3-quotes.right {
+        right: 0px!important;
+        bottom: -50px;
+    }
+
+    .pd-testimonial-slider-3-mainText {
+        z-index: 10;
+        position: relative;
+        font-weight: 300;
+        color: $white;
+    }
+
+    .pd-testimonial-slider-3-quotation {
+        line-height: 2.2;
+        font-size: 1.2rem;
+    }
+
+    .pd-testimonial-slider-3-author {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        z-index: 10;
+        position: relative;
+        color: $white;
+
+        @media (max-width: 575px) {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        img {
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+            box-shadow: 0 10px 5px -5px rgba(0,0,0,.15);
+        }
+    }
+
+    .pd-testimonial-slider-3-arrowWrapper {
+        border: none;
+        background: none;
+        position: absolute;
+        top: 50%;
+    }
+
+    .pd-testimonial-slider-3-arrowWrapper.glide__arrow--right {
+        right: 0;
+    }
+
+    .pd-testimonial-slider-3-link {
+        font-weight: 700;
+        text-decoration: none;
+        transition: color 0.4s;
+        color: $white;
+
+        &:hover {
+            text-decoration: none;
+            color: lighten($white, 10%);
+        }
+
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: 2px;
+        }
+    }
+
+    .glide__bullets {
+        text-align: center;
+
+        .glide__bullet {
+            width: 9px;
+            height: 9px;
+            padding: 0;
+            border-radius: 50%;
+            border: 2px solid darken($white, 10%);
+            background: $white;
+            transition: transform 0.4s;
+        }
+
+        .glide__bullet.glide__bullet--active {
+            transform: scale(1.3);
+
+            // box-shadow: 2px 2px 6px 3px rgba(0,0,0,0.4);
+        }
+    }
+
+    .pd-testimonial-4-image-wrapper {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        overflow: hidden;
+        height: 100%;
+        z-index: 0;
+        width: 100%;
+
+        img {
+            object-fit: cover;
+            object-position: center center;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    .pd-testimonial-4-overlay {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        height: 100%;
+        width: 100%;
+        background: linear-gradient(rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.6) 30%, rgba(0, 0, 0, 0.6) 70%, rgba(0, 0, 0, 0.7) 100%);
+    }
+}
+
+// end pd-testimonial-slider-3
 
