Added equal heights for the speech bubbles

--- a/bootstrap_theme/pendigital/factory_testimonial_sliders.scss
+++ b/bootstrap_theme/pendigital/factory_testimonial_sliders.scss
@@ -388,18 +388,6 @@
         letter-spacing: 0.1em;
     }
 
-    .pd-testimonial-slider-4-mainText {
-        z-index: 10;
-        position: relative;
-        font-weight: 300;
-        color: $black;
-    }
-
-    .pd-testimonial-slider-4-quotation {
-        line-height: 2.2;
-        font-size: 1.2rem;
-    }
-
     .pd-testimonial-slider-4-bubble {
         background: $white;
         border-radius: 5px;
@@ -478,6 +466,14 @@
         }
     }
 
+    .glide__slides {
+        .glide__slide {
+            height: auto;
+
+            // make 100% if you want unequal heights
+        }
+    }
+
     .glide__bullets {
         text-align: center;
 
@@ -500,4 +496,134 @@
 }
 
 // end pd-testimonial-slider-4
+// start testimonial slider 5
+.pd-testimonial-slider-5 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+    background: linear-gradient(#f7f7f7 0%, #f9f9f9 20%, #f9f9f9 90%, #f7f7f7 100%);
+    padding-top: 100px;
+    padding-bottom: 60px;
+
+    h2 {
+        position: relative;
+        font-weight: 700;
+        font-size: 0.7rem;
+        color: $white;
+        display: inline-block;
+        background: $info;
+        padding: 8px 14px;
+        border-radius: 50em;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+
+    .pd-testimonial-slider-5-bubble {
+        background: $primary;
+        border-radius: 5px;
+        box-shadow: 5px 5px 12px -1px rgba(0, 0, 0, 0.2);
+        font-size: 1rem;
+        line-height: 2;
+        font-weight: 400;
+        color: $white;
+    }
+
+    .pd-testimonial-slider-5-author-wrapper {
+        h3 {
+            font-size: 1rem;
+            font-weight: 700;
+        }
+
+        p {
+            color: $gray-600;
+            font-weight: 400;
+            font-size: 1rem;
+        }
+
+        img {
+            border-radius: 50%;
+            width: 90px;
+            height: 90px;
+        }
+    }
+
+    .pd-testimonial-slider-5-arrowWrapper {
+        border: none;
+        background: none;
+        position: absolute;
+        top: 50%;
+    }
+
+    .pd-testimonial-slider-5-arrowWrapper.glide__arrow--right {
+        right: -40px;
+    }
+
+    .pd-testimonial-slider-5-arrowWrapper.glide__arrow--left {
+        left: -40px;
+    }
+
+    @media (max-width: 639px) {
+        .pd-testimonial-slider-5-arrowWrapper {
+            top: -60px;
+            background: $gray-200;
+            padding: 10px;
+            border: 1px solid $gray-300;
+            border-radius: 5px;
+        }
+
+        .pd-testimonial-slider-5-arrowWrapper.glide__arrow--left {
+            left: 10px;
+        }
+
+        .pd-testimonial-slider-5-arrowWrapper.glide__arrow--right {
+            left: 67px;
+        }
+    }
+
+    .pd-testimonial-slider-5-link {
+        font-weight: 700;
+        text-decoration: none;
+        transition: color 0.4s;
+        color: $primary;
+
+        &:hover {
+            text-decoration: none;
+            color: lighten($primary, 10%);
+        }
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
+        }
+    }
+
+    .glide__slides {
+        .glide__slide {
+            height: auto;
+
+            // make 100% if you want unequal heights
+        }
+    }
+
+    .glide__bullets {
+        text-align: center;
+
+        .glide__bullet {
+            width: 9px;
+            height: 9px;
+            padding: 0;
+            border-radius: 50%;
+            border: 2px solid darken($primary, 10%);
+            background: $primary;
+            transition: transform 0.4s;
+        }
+
+        .glide__bullet.glide__bullet--active {
+            transform: scale(1.3);
+
+            // box-shadow: 2px 2px 6px 3px rgba(0,0,0,0.4);
+        }
+    }
+}
+
+// end pd-testimonial-slider-5
 
