--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -48,5 +48,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_sections";
 @import "pendigital/factory_footers";
 @import "pendigital/factory_testimonial_sliders";
+@import "pendigital/factory_logo_strips";
 
 /* Custom CSS rules come here */
