--- a/bootstrap_theme/pendigital/factory_sections.scss
+++ b/bootstrap_theme/pendigital/factory_sections.scss
@@ -479,6 +479,68 @@
 }
 
 // end pd-section-7
+// start pd-section-8
+.pd-section-8 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+
+    h2 {
+        font-weight: 700;
+        font-size: 0.7rem;
+        color: $white;
+        display: inline-block;
+        background: $info;
+        padding: 8px 14px;
+        border-radius: 50em;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+
+    .pd-section-8-headline {
+        font-size: 2rem;
+        line-height: 1.8;
+        font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-section-8-subHeadline {
+        font-weight: 300;
+        line-height: 2;
+        font-size: 1rem;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-section-8-image-wrapper {
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    .pd-section-8-link {
+        font-weight: 700;
+        text-decoration: none;
+        transition: color 0.4s;
+
+        &:hover {
+            text-decoration: none;
+            color: lighten($primary, 10%);
+        }
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
+        }
+    }
+}
+
+// end pd-section-8
 
 
 
