--- a/bootstrap_theme/pendigital/factory_sections.scss
+++ b/bootstrap_theme/pendigital/factory_sections.scss
@@ -597,6 +597,82 @@
 }
 
 // end pd-section-9
+// start pd-section-10
+.pd-section-10 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+
+    h2 {
+        font-weight: 700;
+        font-size: 0.7rem;
+        color: $white;
+        display: inline-block;
+        background: $info;
+        padding: 8px 14px;
+        border-radius: 50em;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+
+    .pd-section-10-headline {
+        font-weight: 300;
+
+        strong {
+            font-weight: 700;
+            font-size: 2rem;
+        }
+    }
+
+    .pd-section-10-subHeadline {
+        font-weight: 300;
+        line-height: 2;
+    }
+
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        color: $black;
+        font-weight: 700;
+        text-transform: uppercase;
+        font-size: 0.8rem;
+
+        li {
+            padding-top: 4px;
+            padding-bottom: 4px;
+            padding-left: 32px;
+            position: relative;
+
+            &:before {
+                content: url(/images/design-assets/icon-checkmark.svg);
+                width: 12px;
+                height: 12px;
+                position: absolute;
+                left: 0;
+            }
+        }
+    }
+
+    .pd-section-10-image-wrapper {
+        width: 100%;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        position: relative;
+
+        @media (min-width: 992px) {
+            padding-left: 40px;
+            padding-right: 40px;
+            width: 80%;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
+// end pd-section-10
 
 
 
