--- a/bootstrap_theme/pendigital/factory_sections.scss
+++ b/bootstrap_theme/pendigital/factory_sections.scss
@@ -229,7 +229,7 @@
         img {
             width: 280px;
             position: absolute;
-            bottom: -200px;
+            bottom: -150px;
             left: 0;
             height: auto;
         }
@@ -673,6 +673,93 @@
 }
 
 // end pd-section-10
+// start pd-section-11
+.pd-section-11 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+    background: linear-gradient($gray-100 0%, $white 20%, $white 80%, $gray-100 100%);
+
+    h2 {
+        font-weight: 700;
+        font-size: 0.7rem;
+        color: $white;
+        display: inline-block;
+
+        // background: rgba(255, 255, 255, 1);
+        background: $info;
+        padding: 8px 14px;
+        border-radius: 50em;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+
+    .pd-section-11-headline {
+        color: $black;
+        font-weight: 300;
+        line-height: 1.4;
+        font-size: 2rem;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-section-11-para {
+        color: $gray-600;
+        line-height: 2;
+        font-weight: 300;
+    }
+
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        color: $black;
+        font-weight: 700;
+        text-transform: uppercase;
+        font-size: 0.8rem;
+
+        li {
+            padding-top: 4px;
+            padding-bottom: 4px;
+            padding-left: 32px;
+            position: relative;
+
+            &:before {
+                content: url(/images/design-assets/icon-checkmark.svg);
+                width: 12px;
+                height: 12px;
+                position: absolute;
+                left: 0;
+            }
+        }
+    }
+
+    .pd-section-11-image-outer {
+        padding-right: 10px;
+        padding-left: 10px;
+        height: 100%;
+        min-height: 400px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        img {
+            width: auto;
+            height: 600px;
+        }
+
+        @media (max-width: 991px) {
+            img {
+                height: 400px;
+            }
+        }
+    }
+}
+
+// end pd-section-11
 
 
 
