Added video heroes with modal

--- a/bootstrap_theme/pendigital/factory_heroes.scss
+++ b/bootstrap_theme/pendigital/factory_heroes.scss
@@ -705,6 +705,8 @@
     }
 }
 
+// end of pd-hero-7
+// start pd-hero-8
 .pd-hero-8 {
     border-top: 1px solid $gray-200;
     border-bottom: 1px solid $gray-200;
