--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -49,5 +49,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_footers";
 @import "pendigital/factory_testimonial_sliders";
 @import "pendigital/factory_logo_strips";
+@import "pendigital/factory_heroVideos";
 
 /* Custom CSS rules come here */
