--- a/bootstrap_theme/pendigital/factory_heroVideos.scss
+++ b/bootstrap_theme/pendigital/factory_heroVideos.scss
@@ -248,7 +248,7 @@
                 margin-top: 0px;
 
                 &:focus {
-                    outline: 2px dotted $primary;
+                    outline: 2px dotted $white;
                     outline-offset: 2px;
                 }
             }
@@ -270,7 +270,7 @@
 }
 
 // end pd-video-hero-4
-// start pd-hero-video-4
+// start pd-hero-video-5
 .pd-hero-video-5 {
     background: linear-gradient(180deg, $primary, darken($primary, 10%));
 
@@ -305,42 +305,6 @@
         font-weight: 300;
     }
 
-    .pd-hero-video-5-cta {
-        display: flex;
-        flex-direction: column;
-        align-items: stretch;
-
-        .btn {
-            margin-top: 10px;
-        }
-
-        .btn.btn-info {
-            color: $white;
-        }
-    }
-
-    @media (min-width: 576px) {
-        .pd-hero-video-5-cta {
-            flex-direction: row;
-            justify-content: flex-start;
-            align-items: center;
-
-            .btn {
-                // margin-left: 20px;
-                margin-top: 0px;
-            }
-
-            .btn.btn-info {
-                color: $white;
-
-                &:focus {
-                    outline: 2px dotted $white;
-                    outline-offset: 2px;
-                }
-            }
-        }
-    }
-
     .pd-hero-video-5-image-outer {
         width: 70%;
     }
@@ -356,6 +320,11 @@
             &:hover {
                 transform: scale(1.1);
             }
+
+            &:focus {
+                outline: 3px dotted $black;
+                outline-offset: 6px;
+            }
         }
 
         &:after {
@@ -370,11 +339,11 @@
             border-radius: 50%;
             box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
             transform: scale(1);
-            animation: pulse 2s infinite;
+            animation: pd-hero-video-5-pulse 2s infinite;
             z-index: 0;
         }
 
-        @keyframes pulse {
+        @keyframes pd-hero-video-5-pulse {
             0% {
                 transform: scale(0.85);
                 box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.8);
@@ -427,6 +396,11 @@
             &:hover {
                 transform: scale(1.1);
                 color: $white!important;
+            }
+
+            &:focus {
+                outline: 2px dotted $white;
+                outline-offset: 2px;
             }
         }
     }
@@ -538,6 +512,11 @@
             &:hover {
                 transform: scale(1.1);
             }
+
+            &:focus {
+                outline: 2px dotted $white;
+                outline-offset: 6px;
+            }
         }
 
         &:after {
@@ -552,11 +531,11 @@
             border-radius: 50%;
             box-shadow: 0 0 0 0 rgba(255, 255, 255, 1);
             transform: scale(1);
-            animation: pulse 2s infinite;
+            animation: pd-hero-video-6-pulse 2s infinite;
             z-index: 0;
         }
 
-        @keyframes pulse {
+        @keyframes pd-hero-video-6-pulse {
             0% {
                 transform: scale(0.85);
                 box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.8);
@@ -609,6 +588,11 @@
             &:hover {
                 transform: scale(1.1);
                 color: $white!important;
+            }
+
+            &:focus {
+                outline: 2px dotted $white;
+                outline-offset: 6px;
             }
         }
     }
