--- a/bootstrap_theme/pendigital/factory_heroes.scss
+++ b/bootstrap_theme/pendigital/factory_heroes.scss
@@ -11,9 +11,13 @@
 
     .pd-hero-1-headline {
         color: white;
-        font-weight: 700;
+        font-weight: 300;
         font-size: 3rem;
         line-height: 1.4;
+
+        strong {
+            font-weight: 700;
+        }
 
         @media (min-width: 768px) and (max-width: 1199px) {
             font-size: 2rem;
@@ -24,6 +28,10 @@
         color: $white;
         font-size: 1rem;
         font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
     }
 
     div.pd-hero-image-1-outer {
@@ -119,9 +127,13 @@
 
     .pd-hero-2-headline {
         color: white;
-        font-weight: 700;
+        font-weight: 300;
         font-size: 2.8rem;
         line-height: 1.4;
+
+        strong {
+            font-weight: 700;
+        }
 
         @media (max-width: 575px) {
             font-size: 2rem;
@@ -133,6 +145,10 @@
         text-align: center;
         font-size: 1rem;
         font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
     }
 
     .pd-hero-2-form-outer {
@@ -251,9 +267,13 @@
 
     .pd-hero-3-headline {
         color: $primary;
-        font-weight: 700;
+        font-weight: 300;
         font-size: 2.8rem;
         line-height: 1.4;
+
+        strong {
+            font-weight: 700;
+        }
 
         @media (max-width: 575px) {
             font-size: 2rem;
@@ -265,6 +285,10 @@
         text-align: center;
         font-size: 1rem;
         font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
     }
 
     .pd-hero-3-form-outer {
@@ -368,9 +392,13 @@
 
     .pd-hero-4-headline {
         color: $primary;
-        font-weight: 700;
+        font-weight: 300;
         font-size: 2rem;
         line-height: 1.5;
+
+        strong {
+            font-weight: 700;
+        }
 
         @media (max-width: 575px) {
             font-size: 2rem;
@@ -381,6 +409,10 @@
         color: $gray-600;
         font-size: 1rem;
         font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
     }
 
     .pd-hero-4-image {
@@ -451,9 +483,13 @@
 
     .pd-hero-5-headline {
         color: white;
-        font-weight: 700;
+        font-weight: 300;
         font-size: 2rem;
         line-height: 1.5;
+
+        strong {
+            font-weight: 700;
+        }
 
         @media (max-width: 575px) {
             font-size: 2rem;
@@ -464,6 +500,10 @@
         color: white;
         font-size: 1rem;
         font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
     }
 
     .pd-hero-5-image {
@@ -537,7 +577,7 @@
         display: inline-block;
 
         // background: rgba(255, 255, 255, 1);
-        background: $secondary;
+        background: $info;
         padding: 8px 14px;
         border-radius: 50em;
         text-transform: uppercase;
@@ -546,9 +586,13 @@
 
     .pd-hero-6-headline {
         color: white;
-        font-weight: 700;
+        font-weight: 300;
         font-size: 2rem;
         line-height: 1.5;
+
+        strong {
+            font-weight: 700;
+        }
 
         @media (max-width: 575px) {
             font-size: 2rem;
@@ -559,6 +603,10 @@
         color: white;
         font-size: 1rem;
         font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
     }
 
     .pd-hero-6-image {
@@ -642,9 +690,13 @@
 
     .pd-hero-7-headline {
         color: white;
-        font-weight: 700;
+        font-weight: 300;
         font-size: 2rem;
         line-height: 1.5;
+
+        strong {
+            font-weight: 700;
+        }
 
         @media (max-width: 575px) {
             font-size: 2rem;
@@ -655,6 +707,10 @@
         color: white;
         font-size: 1rem;
         font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
     }
 
     .pd-hero-7-cta {
@@ -728,9 +784,13 @@
 
     .pd-hero-8-headline {
         color: $primary;
-        font-weight: 700;
+        font-weight: 300;
         font-size: 2rem;
         line-height: 1.5;
+
+        strong {
+            font-weight: 700;
+        }
 
         @media (max-width: 575px) {
             font-size: 2rem;
@@ -741,6 +801,10 @@
         color: $gray-600;
         font-size: 1rem;
         font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
     }
 
     .pd-hero-8-cta {
